@@ -69,7 +69,7 @@
  @since v2.0.0
  */
 #ifndef CC_ENABLE_GL_STATE_CACHE
-#define CC_ENABLE_GL_STATE_CACHE 1
+#define CC_ENABLE_GL_STATE_CACHE 0
 #endif
 
 /** @def CC_ENABLE_DEPRECATED
